--- a/index.html
+++ b/index.html
@@ -81,10 +81,18 @@
   </div>
 
   <div class="team-member">
+    <img src="B3FBB099-F3AC-4734-BBCC-96C00E78B176_1_201_a.jpeg" alt="Emma Lindbergh photo">
+    <div>
+      <h4>Anna Han</h4>
+      <p> Anna holds a BSFS from Georgetown University’s School of Foreign Service with a major in Science, Technology, and International Affairs and a minor in Mathematics. She works on tracking atmospheric F-Gases.</p>
+    </div>
+  </div>
+
+  <div class="team-member">
     <img src="BC0AB515-5EAC-41D7-AFD2-DC2AC259B96D.jpeg" alt="Emma Lindbergh photo">
     <div>
       <h4>Emma Lindbergh</h4>
-      <p>Undergraduate student at Georgetown University pursuing a major in Computer Science and a minor in Environmental Studies.</p>
+      <p>Undergraduate student at Georgetown University pursuing a major in Computer Science and a minor in Environmental Studies. She works on developing ecological sensors.</p>
     </div>
   </div>
 </section>
