--- a/treeData.html
+++ b/treeData.html
@@ -431,6 +431,11 @@ function getAutoScaleBounds(data, lowerPercentile = 1, upperPercentile = 99) {
         const recentWeatherRainfall = weatherRainfall[weatherRainfall.length - 1000];
         const recentWeatherSolar = weatherSolar[weatherSolar.length - 1000];
 
+        print(recentWeatherTemp);
+        print(recentWeatherHum);
+        print(recentWeatherRainfall);
+        print(recentWeatherSolar);
+
 //--------------------build sapflow dataset--------------------
       // const headers = sapData.values[0];
       // const dataRows = sapData.values.slice(1);
