--- a/team.html
+++ b/team.html
@@ -98,6 +98,14 @@
           satellite-based greenhouse gas monitoring and advancing techniques to interpret large-scale atmospheric data.</p>
       </div>
     </div>
+
+    <div class="team-member">
+      <img src="B3FBB099-F3AC-4734-BBCC-96C00E78B176_1_201_a.jpeg" alt="Emma Lindbergh photo">
+      <div>
+        <h4>Anna Han</h4>
+        <p> Anna holds a BSFS from Georgetown University’s School of Foreign Service with a major in Science, Technology, and International Affairs and a minor in Mathematics. She works on tracking atmospheric F-Gases.</p>
+      </div>
+    </div>
     
     <div class="team-member">
       <img src="BC0AB515-5EAC-41D7-AFD2-DC2AC259B96D.jpeg" alt="Team member photo">
