--- a/index.html
+++ b/index.html
@@ -44,17 +44,24 @@
   
 
   <a class="card" href="SIF.html">
-    <h4>OCO-2 and Solar Induced Flourescence (SIF) </h4>
+    <h4>OCO-2 and Solar Induced Fluorescence (SIF)</h4>
     <p>
       The Orbiting Carbon Observatory-2 (OCO-2) is capable of measuring Solar-Induced chlorophyll Fluorescence (SIF). 
       SIF helps us understand terrestrial photosynthesis which furthers our understanding of carbon dioxide in our atmosphere. </p>
   </a>
 
   <a class="card" href="RSF.html">
-    <h4>Ribbonized Sap Flow Sensor </h4>
+    <h4>Ribbonized Sap Flow Sensor</h4>
     <p>
       The Ribbonized Sap Flow (RSF) sensor is a novel design for measuring sap flow in trees.
       It is designed to be low-cost, easy to deploy, and capable of long-term monitoring of tree water use.
+       </p>
+    </a>
+
+    <a class="card" href="FGAS.html">
+    <h4>F-Gases Monitoring</h4>
+    <p>
+      Estimating the emissions of fluorinated gases (F-Gases). 
        </p>
     </a>
   
