--- a/projects.html
+++ b/projects.html
@@ -50,3 +50,10 @@
       </a>
 </html>
 
+  <a class="card" href="FGAS.html">
+    <h4>F-Gases Monitoring</h4>
+    <p>
+      Estimating the emissions of fluorinated gases (F-Gases). F-Gases are potent greenhouse gases used in various industrial applications, and monitoring their emissions is crucial for climate change mitigation.
+       </p>
+      </a>
+
